--- a/CookPopularControl/Themes/BaseStyle/RippleStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/RippleStyle.xaml
@@ -1,18 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:ripple="clr-namespace:CookPopularControl.Controls.Ripple">
+                    xmlns:pc="clr-namespace:CookPopularControl.Controls">
 
-    <Style x:Key="{x:Type ripple:Ripple}" TargetType="{x:Type ripple:Ripple}">
+    <Style x:Key="{x:Type pc:Ripple}" TargetType="{x:Type pc:Ripple}">
         <Setter Property="RecognizesAccessKey" Value="True" />
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="VerticalAlignment" Value="Stretch" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="IsTabStop" Value="False" />
-        <Setter Property="ClipToBounds" Value="{Binding RelativeSource={RelativeSource Self}, Path=(ripple:RippleAssist.ClipToBounds)}" />
-        <Setter Property="Feedback" Value="{Binding RelativeSource={RelativeSource Self}, Path=(ripple:RippleAssist.Feedback)}" />
+        <Setter Property="ClipToBounds" Value="{Binding RelativeSource={RelativeSource Self}, Path=(pc:RippleAssist.ClipToBounds)}" />
+        <Setter Property="Feedback" Value="{Binding RelativeSource={RelativeSource Self}, Path=(pc:RippleAssist.Feedback)}" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ripple:Ripple}">
+                <ControlTemplate TargetType="{x:Type pc:Ripple}">
                     <Grid Background="{TemplateBinding Background}">
                         <Canvas IsHitTestVisible="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                             <Ellipse x:Name="ClickEllipse"
@@ -35,7 +35,7 @@
                                 <Style TargetType="Canvas">
                                     <Setter Property="ZIndex" Value="0" />
                                     <Style.Triggers>
-                                        <Trigger Property="ripple:RippleAssist.RippleOnTop" Value="True">
+                                        <Trigger Property="pc:RippleAssist.RippleOnTop" Value="True">
                                             <Setter Property="ZIndex" Value="2" />
                                         </Trigger>
                                     </Style.Triggers>
